# multi_cam_calib

./: CalibExtri_fisheye.py  CalibIntri_fisheye.py  ChessBoard.py  FileUtils.py  README.md  blender_dome_test.py  calibrate.py  calibrate_dome.py  calibrate_v1.py  calibrate_v2.py  calibration.g2o  createcharucoboard.py  debug.txt  pose_visualize.py  read_npy.py  readintrifromblender.py  reusing3dpoints.py  test.g2o  test.py  testgeo.py  testgeo_2.py  unit_test_calibrateintri.py  unit_test_g2o.py
calibmar_v1/: .clang-format  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md
calibmar_v1/.gitlab-ci/: build-ubuntu.yaml  build-windows.yaml
calibmar_v1/cmake/: build_info.cmake  package.cmake
calibmar_v1/docker/ubuntu/: Dockerfile
calibmar_v1/docker/windows/: Dockerfile
calibmar_v1/lib/: CMakeLists.txt  README.md
calibmar_v1/lib/colmap/: CMakeLists.txt
calibmar_v1/lib/colmap/scripts/python/: colmap_openmvs.py  process_raw_nav.py  read_write_model.py
calibmar_v1/lib/colmap/src/colmap/: CMakeLists.txt
calibmar_v1/src/app/: CMakeLists.txt  main.cpp
calibmar_v1/src/app/ui/: CMakeLists.txt  main_window.cpp  main_window.h
calibmar_v1/src/app/ui/dialogs/: CMakeLists.txt  file_calibration_dialog.cpp  file_calibration_dialog.h  housing_diagram_dialog.h  license_dialog.cpp  (+9 more)
calibmar_v1/src/calibmar/: CMakeLists.txt  version.h.in
calibmar_v1/src/calibmar/calibrators/: CMakeLists.txt  basic_calibrator.cpp  calibrator.h  calibrator3D.h  colmap_calibration.cpp  general_calibration.cpp  housing_calibrator.h  non_svp_calibration.h  opencv_calibration.cpp  opencv_calibration.h  stereo_calibration.cpp  stereo_calibration.h  stereo_calibrator.h
calibmar_v1/src/calibmar/core/: CMakeLists.txt  calibration.cpp  calibration.h  camera_models.h  image.h  natural_sort.h  pixmap.cpp  report.cpp  report.h  undistort.cpp
calibmar_v1/src/calibmar/extractors/: aruco_board_extractor.cpp  aruco_sift_extractor.cpp  aruco_sift_extractor.h  charuco_board_extractor.h  chessboard_extractor.cpp  extractor.h  sift_extractor.cpp  sift_extractor.h
calibmar_v1/src/calibmar/pose_suggestion/: CMakeLists.txt  aruco_target_tracker.cpp  chessboard_target_tracker.cpp  pose_suggestion.cpp  simmulated_annealing.h  target_tracker.cpp  target_tracker.h
calibmar_v1/src/calibmar/readers/: CMakeLists.txt  filesystem_reader.cpp  image_reader.h
calibmar_v1/tests/: CMakeLists.txt  tests.cpp
calibmar_v1/tests/calibrators/: CMakeLists.txt  basic_calibrator_test.cpp  housing_calibrator_test.cpp  stereo_calibrator_test.cpp
calibmar_v1/tests/evaluation/: CMakeLists.txt  eval.cpp
calibmar_v1/tests/extractors/: CMakeLists.txt  arucoboard_extractor_test.cpp  chessboard_extractor_test.cpp
calibmar_v1/tests/general_calibration/: CMakeLists.txt  general_calibration_test.cpp  stereo_calibration_test.cpp
calibmar_v1/tests/pose_suggestion/: CMakeLists.txt
calibmar_v1/tests/report/: report_test.cpp
calibmar_v1/tests/utils/: memory_image_reader.h  test_helpers.h  test_images.h
(+187 files in other folders)
